--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^1.0.2",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
